--- a/EFCoreDab2/EFCoreDab2/EFCoreDab2.csproj
+++ b/EFCoreDab2/EFCoreDab2/EFCoreDab2.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.0-preview1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
         <PrivateAssets>all</PrivateAssets>
